// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditSettings Renders the component when loading, with no axe violations 1`] = `
<div
  class="MuiContainer-root makeStyles-container-1 MuiContainer-maxWidthMd"
>
  <h2
    class="MuiTypography-root MuiTypography-h6"
  >
    settings.title
  </h2>
  <p>
    settings.content
  </p>
  <div>
    SettingsForm
  </div>
</div>
`;

exports[`EditSettings Renders the component when loading, with no axe violations 2`] = `
<div
  class="MuiContainer-root makeStyles-container-2 MuiContainer-maxWidthMd"
>
  <h2
    class="MuiTypography-root MuiTypography-h6"
  >
    settings.title
  </h2>
  <p>
    settings.content
  </p>
  status.general.loading
</div>
`;

exports[`EditSettings Renders the component with error, with no axe violations 1`] = `
<div
  class="MuiContainer-root makeStyles-container-3 MuiContainer-maxWidthMd"
>
  <h2
    class="MuiTypography-root MuiTypography-h6"
  >
    settings.title
  </h2>
  <p>
    settings.content
  </p>
  status.general.error
  : 
  you blew it
</div>
`;
